@@ -19,7 +19,8 @@ import java.util.List;
 import java.util.TimeZone;
 
 import static java.util.Comparator.reverseOrder;
-import static java.util.stream.Collectors.toList;
+import static java.util.stream.Stream.concat;
+import static java.util.stream.Stream.of;
 import static org.synyx.urlaubsverwaltung.security.SecurityRules.IS_OFFICE;
 
 @Controller
@@ -105,10 +106,9 @@ public class SettingsCalendarSyncViewController implements HasLaunchpad {
         final List<String> providers = calendarProviders.stream()
             .map(provider -> provider.getClass().getSimpleName())
             .sorted(reverseOrder())
-            .collect(toList());
-        providers.addFirst("NoSyncProvider");
+            .toList();
 
-        model.addAttribute("providers", providers);
+        model.addAttribute("providers", concat(of("NoSyncProvider"), providers.stream()).toList());
     }
 
     private SettingsCalendarSyncDto settingsToDto(CalendarSettings calendarSettings) {
